--- a/sgeg-admin/resources/css/seats.css
+++ b/sgeg-admin/resources/css/seats.css
@@ -1,38 +1,44 @@
 
-.seatSelection {
-    text-align: center;
-    padding: 5px;
-      margin: 15px;}
-  
-  .seatsReceipt {text-align: center;}
-  
-  .seatNumber {
-      display: inline;
-      padding: 10px;
-      background-color: #5c86eb;
-      color: #FFF;
-      border-radius: 5px;
-      cursor: default;
-      height: 25px;
-      width: 25px;
-      line-height: 25px;
-      text-align: center;
-   }
-  
-  .seatRow {padding: 10px;}
-  
-  .seatSelected {
-      background-color: lightgreen;
-      color: black;
-   }
-  
-  .seatUnavailable {background-color: gray;}
-  
-  .seatRowNumber {
-      clear: none;
-      display: inline;
-   }
-  
-  .hidden {display: none;}
-  
-  .seatsAmount {max-width: 2em;}
+    .seatSelection {
+        text-align: center;
+        padding: 5px;
+        margin: 15px;
+    }
+
+    .seatsReceipt {
+        text-align: center;
+    }
+
+    .seatNumber {
+        margin: 2px;
+        background-color: #5c86eb;
+        color: #FFF;
+        border-radius: 5px;
+        cursor: default;
+        height: 25px;
+        width: 25px;
+        line-height: 25px;
+        text-align: center;
+    }
+
+    .seatSelected {
+        background-color: lightgreen;
+        color: black;
+    }
+
+    .seatUnavailable {
+        background-color: gray;
+    }
+
+    .seatRowNumber {
+        clear: none;
+        display: inline;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .seatsAmount {
+        max-width: 2em;
+    }
